  * Drop duplicate encode("UTF-8") calls while preseeding passwd/* (closes:
    Malone #42097).

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Set busy cursor and disable buttons between steps
    - Fix reboot
    - Fix get_disk_choice, Closes Malone #41865
    - Fix unicode problem in get_disk_choice, Closes Malone #41893
    - Disable new_size_frame

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 29 Apr 2006 14:57:45 +0100

ubiquity (0.99.70) dapper; urgency=low

  [ Colin Watson ]
  * Ignore errors from locale.setlocale() in timezone component too (closes:
    Malone #41846).
  * Account for preseeding changes in partman-auto 45ubuntu10.
  * Escape passwords when sending them to debconf (closes: Malone #37934).
    Requires debconf (>= 1.4.72) and won't work with cdebconf yet.
  * Automatic update of included source packages: debian-installer-utils
    1.22ubuntu8, partman-auto 45ubuntu10.

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Order methods to match gtkui
    - Some fixes to crashdialogue
    - Don't show blank choices in set_disk_choices (closes: Malone #41868)
    - Delay auto-partitioning until after final step

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 28 Apr 2006 21:24:16 +0100

ubiquity (0.99.69) dapper; urgency=low

  * GTK frontend:
    - Make sure labels don't end up in the focus chain, despite being
      selectable.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Apr 2006 00:19:51 +0100

ubiquity (0.99.68) dapper; urgency=low

  [ Tollef Fog Heen ]
  * Configure French Swiss, German Swiss and Slovenian keyboards correctly
    in X.

  [ Colin Watson ]
  * Ignore comments and blank lines in manifest files, so that we can put
    comments there to help out customisers.
  * GTK frontend:
    - Make label text selectable (closes: Malone #41618).
    - Guard against calling gtk.main_quit() outside of a main loop when
      quitting (closes: Malone #41619).
  * KDE frontend: